--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mern-stack-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.9.1",
@@ -17,7 +18,7 @@
     "react-dom": "^16.12.0",
     "react-file-base64": "^1.0.3",
     "react-google-login": "^5.1.25",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.2.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
